some more basics

--- a/app/assets/stylesheets/base/_inputs.scss
+++ b/app/assets/stylesheets/base/_inputs.scss
@@ -1,3 +1,8 @@
+.contact-us {
+  input, select {
+    width: 100%;
+  }
+}
 
 input[type="radio"].modifier, input[type="checkbox"].modifier {
   opacity: 0;
