--- a/app/assets/stylesheets/base/_utilities.scss
+++ b/app/assets/stylesheets/base/_utilities.scss
@@ -83,7 +83,8 @@
   margin-left: auto;
   margin-right: auto;
   position: relative;
-  max-width: 480px;
+  width: 480px;
+  min-width: 240px;
 }
 
 .my-container-threefour {
