--- a/app/views/application/howdy.html.erb
+++ b/app/views/application/howdy.html.erb
@@ -40,7 +40,7 @@
 
         <div class="my-container-half gen-inb-top center">
           <h3 class="new text-center">For Vendors</h3>
-          <p>Shnack is a mobile application designed for concessions at large and small scale events, that lets customers order and pay for a vendor's food via their phone. Shnack eliminates the time customers are spending standing in lines by providing a quick and elegant way to purchase food from your seat. Customers will order food from their phone and will be notified when their food is ready to be picked up. By eliminating the need to wait in line, we can increase customer satisfaction, increase vendor revenue, and ultimately help provide a superior experience to customers.</p>
+          <p>Nearly 10-15% of potential customers at any given event will pass on getting food if it means waiting in line or missing the action.  With Shnack you can give your customers the best possible experience and increase your concessions revenue.  Using our streamlined integration process, you can be set up in a matter of minutes and begin using Shnack to capture brand new customers and increase your concession sales.</p>
         </div>
       </section>
     </div>
@@ -76,55 +76,16 @@
 
 
 
-
-
-  <!-- <div id="level-3">
-
-
-
-      <div class="container my-container">
-        <div id="info-tagline">Never miss a moment, never miss a meal</div>
-    
-
-
-        <div class="row">
-          <ul class="info-links">
-            <li id="about-links1" class="info-links col-4"><a onClick="forFans()">For Fans</a></li>
-            <li id="about-links2" class="info-links col-4"><a onClick="forVendors()">For Vendors</a></li>
-            <li id="about-links3" class="info-links col-4"><a onClick="contactUs()">Contact Us</a></li>
-          </ul>
-        </div>
-      
-        <div class="row" style="position:relative;">
-          <div class="col-sm-8">
-            <div id="info-text">Shnack is a mobile application designed for concessions at large and small scale events, that lets customers order and pay for a vendor's food via their phone. Shnack eliminates the time customers are spending standing in lines by providing a quick and elegant way to purchase food from your seat. Customers will order food from their phone and will be notified when their food is ready to be picked up. By eliminating the need to wait in line, we can increase customer satisfaction, increase vendor revenue, and ultimately help provide a superior experience to customers.</div>
-
-            <div id="contact-us" class="row">
-              <#%= render 'contact_us_mailer/contact_us_mailer' %>
-            </div>
-
-          </div>
-
-          <#%= image_tag "phone_welcome.png", :class => "col-sm-4", :id => "phone" %>
-          
-
-        </div>
-      </div>
-    </div> -->
-
-
-
-
     <footer class="fb">
-      <a href='/' class="place-order">Place an order | Return to home</a>
       <p>Follow us on Facebook.</p>
       <p>You might see us at a game.</p>
       </br>
       <div class="fb-like" data-href="https://www.facebook.com/shnackapp" data-width="100" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+      <a href='/' class="place-order">Place an order | Return to home</a>
     </footer>
 
-    <footer class="wrapper-cement contact-us">
-        <div class="my-container-threefour pad-lrg">
+    <footer class="wrapper-cement">
+        <div class="my-container-threefour contact-us pad-lrg">
           <%= render 'contact_us_mailer/contact_us_mailer' %>
         </div>
     </footer>
