--- a/app/views/contact_us_mailer/_contact_us_mailer.html.erb
+++ b/app/views/contact_us_mailer/_contact_us_mailer.html.erb
@@ -1,12 +1,16 @@
+<h1 class="new pad-bot-lrg">Want to get in contact?</h1>
+
 <p>Filling out this form is almost as easy as ordering from Shnack</p>
 
 <%= form_tag("/shnack/contact") do %> 
-		<div class="column six" style="padding-right:5px;">
-			<%= text_field_tag :cust_name, nil, :placeholder => "Name", :class => "contact-field" %>
-		</div>
-		<div class="column six">
-			<%= text_field_tag :cust_email, nil, :placeholder => "Email Address", :class => "contact-field" %>
-		</div>
+  <div class="row-new">
+		<%= text_field_tag :cust_name, nil, :placeholder => "Name", :class => "column six pad-sml" %>
+		<%= text_field_tag :cust_email, nil, :placeholder => "Email Address", :class => "column six pad-sml" %>
+	</div>
+  <div class="row-new">
+    <%= text_field_tag :cust_phone, nil, :placeholder => "Phone (Optional)", :class => "column six pad-sml" %>
+    <%= text_field_tag :cust_email, nil, :placeholder => "How did you hear about us", :class => "column six pad-sml" %>
+  </div>
 		<%= text_area_tag :cust_message, nil, :placeholder => "Your message here", :class => "contact-field", :rows => '10' %>
 	</br>
 	<%= submit_tag 'Send', :class=>"btn buttn"%>
