--- a/app/views/application/howdy.html.erb
+++ b/app/views/application/howdy.html.erb
@@ -33,15 +33,17 @@
       <section class="my-container pad-top-lrg pad-bot-lrg">
         <h1>Shnack <small>is the solution</small></h1>
 
-        <div class="my-container-half gen-inb-top center">
+      <div class="row-new">
+        <div class="column-mobile six center">
           <h3 class="new text-center">For Fans</h3>
           <p>Shnack is a mobile application designed for concessions at large and small scale events, that lets customers order and pay for a vendor's food via their phone. Shnack eliminates the time customers are spending standing in lines by providing a quick and elegant way to purchase food from your seat. Customers will order food from their phone and will be notified when their food is ready to be picked up. By eliminating the need to wait in line, we can increase customer satisfaction, increase vendor revenue, and ultimately help provide a superior experience to customers.</p>
         </div>
 
-        <div class="my-container-half gen-inb-top center">
+        <div class="column-mobile six center">
           <h3 class="new text-center">For Vendors</h3>
           <p>Nearly 10-15% of potential customers at any given event will pass on getting food if it means waiting in line or missing the action.  With Shnack you can give your customers the best possible experience and increase your concessions revenue.  Using our streamlined integration process, you can be set up in a matter of minutes and begin using Shnack to capture brand new customers and increase your concession sales.</p>
         </div>
+      </div>
       </section>
     </div>
 
