--- a/app/views/application/howdy.html.erb
+++ b/app/views/application/howdy.html.erb
@@ -79,15 +79,15 @@
 
 
     <footer class="fb">
+      <a href='/' class="place-order">Place an order | Return to home</a>
       <p>Follow us on Facebook.</p>
       <p>You might see us at a game.</p>
       </br>
       <div class="fb-like" data-href="https://www.facebook.com/shnackapp" data-width="100" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
-      <a href='/' class="place-order">Place an order | Return to home</a>
     </footer>
 
-    <footer class="wrapper-cement">
-        <div class="my-container-threefour contact-us pad-lrg">
+    <footer class="wrapper-cement pad-lrg">
+        <div class="my-container-threefour contact-us">
           <%= render 'contact_us_mailer/contact_us_mailer' %>
         </div>
     </footer>
