--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -134,20 +134,20 @@
 
 
 	<div id="level-2">
-		<div class="row">
-			<div class="col-4 step-style">
+		<div class="row-new">
+			<div class="column four step-style">
 				<h1>Order</h1>
 				<%= image_tag("step1.png", :class => "step-style")   %>
 				<p>From your seat, view the menus of vendors. Pay and place your order.</p>
 			</div>
 	
-			<div class="col-4 step-style">
+			<div class="column four step-style">
 				<h1>Relax</h1>
 				<%= image_tag("camera.png", :class => "step-style")   %>
 				<p>Sit back, relax, and enjoy the experience.</p>
 			</div>
 
-			<div class="col-4 step-style">
+			<div class="column four step-style">
 				<h1>PickUp</h1>
 				<%= image_tag("step3.png", :class => "step-style")   %>
 				<p>When your order is ready, a notification will be sent. Pick up and enjoy.</p>
