--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -22,6 +22,7 @@
 
   <div class="the-menu-new">
     <h1 class="cat-heading new">Everything</h1>
+
     <section class="cat-main-group">
       <div class="row-new">
         <div class="column three item-name">Peperoni Pizza</div>
@@ -29,35 +30,54 @@
         <div class="column one plus-to-cart"></div>
         <div class="column one amount-in-cart">0</div>
         <div class="column one minus-to-cart"></div>
-        <div class="column four item-description">This is a test to see what kind of info I can type here and see how this all relates to the yadda yadda</div>
+        <div class="column-mobile four item-description">This is a test to see what kind of info I can type here and see how this all relates to the yadda yadda</div>
       </div>
     </section> <!-- ENDS MAIN GROUP -->
 
     <section class="modifiers-all">
       <h2>Customize this item</h2>
-      <div class="row-new">
-        <h3 class="twelve">Size Options</h3>
-      </div>
-      <div class="row-new">
-        <div class="column four">Milk</div>
-        <div class="column two mod-price">00.00</div>
-        <div class="column one offset-by-five">
-          <input type="radio"></input>
+
+      <div class="row-new line-o-mods">
+
+        <div class="column-mobile six pad-sml">
+          <div class="title"><span>Options</span></div>
+
+          <div class="row-new">
+            <div class="column six">Milk</div>
+            <div class="column two mod-price">00.00</div>
+            <div class="column one offset-by-two">
+              <input type="radio"></input>
+            </div>
+          </div>
+
+          <div class="row-new">
+            <div class="column six">Milk</div>
+            <div class="column two mod-price">00.00</div>
+            <div class="column one one offset-by-two">
+              <input type="radio"></input>
+            </div>
+          </div>
+        </div>
+
+        <div class="column-mobile six pad-sml">
+          <div class="title twelve"><span>Options 2</span></div>
+          <div class="row-new">
+            <div class="column six">Not Milk</div>
+            <div class="column two mod-price">10.00</div>
+            <div class="column one offset-by-two">
+              <input type="radio"></input>
+            </div>
+          </div>
+          <div class="row-new">
+            <div class="column six">Jay Juicce Juicce</div>
+            <div class="column two mod-price">200.00</div>
+            <div class="column one offset-by-two">
+              <input type="radio"></input>
+            </div>
+          </div>
         </div>
       </div>
     </section>
-
-<div class="cat-main-group">
-      <div class="row-new">
-        <div class="column three item-name">Pizza</div>
-        <div class="column two item-price">00.00</div>
-        <div class="column one plus-to-cart"></div>
-        <div class="column one amount-in-cart">0</div>
-        <div class="column one minus-to-cart"></div>
-        <div class="column four item-description">This is a test to see what kind of info I can type here and see how this all relates to the yadda yadda</div>
-      </div>
-    </div> <!-- ENDS MAIN GROUP -->
-
 
   </div> <!-- ENDS THE MENU -->
 
