--- a/app/assets/stylesheets/modules/_topbar.scss
+++ b/app/assets/stylesheets/modules/_topbar.scss
@@ -41,35 +41,32 @@
   @extend .gen_inline;
 }
 
+.title_current_step {
+ text-align: center;
+ text-transform: uppercase;
+  font-size: 10px;
+}
 
 .step {
-  @extend .gen_inline; 
-  text-align: center;
-  text-transform: uppercase;
   float: left;
   width: 33.33%;
   padding: 0;
   margin: 0;
-  font-size: 10px;
-  &.current {
-    ///color: #CCC;
-    font-weight: 700;
-  }
-  &.current .circle {
-    background-color: khaki;
-  }
-  &.completed .circle {
-    //background-color: #444;
+
+ .circle {
+    border: 2px solid khaki;
+    //background-color: #AAA;
+    border-radius:15px;
+    background-image: none;
+    width: 12px;
+    height: 12px;
+    margin: 0 auto;
+
+    &.current {
+      background-color: khaki;
+    }
   }
 }
 
 
-.circle {
-  border: 2px solid #AAA;
-  //background-color: #AAA;
-  border-radius:15px;
-  background-image: none;
-  width: 12px;
-  height: 12px;
-  margin: 0 auto;
-}
+
