--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,11 +31,63 @@
 <body>
 
 	<div class="website-wrapper" id="top">
-		<div id="topbar" class="topbar clear-fix">
-			<a href="/"><h3 class="gen_inline">Shnack</h3></a>
+		<div id="topbar" class="row-new topbar clear-fix">
+			<a href="/"><h3 class="column two">Shnack</h3></a>
+
+			<div class="prgs-bar column-mobile eight">
+
+				<% if current_page?(controller: '/application', action: 'select_stadium') %>
+					<div class="title_current_step">
+						Select your location
+					</div>
+				<% elsif current_page?(controller: '/orders', action: 'new') %>
+					<div class="title_current_step">
+						Craft your meal
+					</div>
+				<% elsif current_page?(controller: '/charges', action: 'new') %>
+					<div class="title_current_step">
+						Confirm and pay
+					</div>
+				<% end %>
+
+				<div class="row-new twelve">
+					<% if current_page?(controller: '/application', action: 'select_stadium') %>
+						<div class="column four">
+							<div class="circle current"></div>
+						</div>
+						<div class="column four">
+							<div class="circle"></div>
+						</div>
+						<div class="column four">
+							<div class="circle"></div>
+						</div>
+					<% elsif current_page?(controller: '/orders', action: 'new') %>
+						<div class="column four">
+							<div class="circle current"></div>
+						</div>
+						<div class="column four">
+							<div class="circle current"></div>
+						</div>
+						<div class="column four">
+							<div class="circle"></div>
+						</div>
+					<% elsif current_page?(controller: '/charges', action: 'new') %>
+						<div class="column four">
+							<div class="circle current"></div>
+						</div>
+						<div class="column four">
+							<div class="circle current"></div>
+						</div>
+						<div class="column four">
+							<div class="circle current"></div>
+						</div>
+					<% end %>
+				</div>
+			</div>
+
 
 			<% if user_signed_in? %>
-				<ul id="click_me" class="user-settings">
+				<ul id="click_me" class="column two my-gear">
 					<li>
 						<a href="#" class="opac-fix"><%= image_tag("gear-small-w.png", alt: "settings", style: "opacity:0.8;") %></a>
 						<ul>
@@ -57,56 +109,6 @@
 					<%= link_to('Sign Up', new_user_registration_path, :class => 'user')  %>  
 				</div> 
 			<%end%>
-
-			<div class="prgs-bar">
-
-				<% if current_page?(controller: '/application', action: 'select_stadium') %>
-					<div class="title_current_step">
-						Select your location
-					</div>
-				<% elsif current_page?(controller: '/orders', action: 'new') %>
-					<div class="title_current_step">
-						Craft your meal
-					</div>
-				<% elsif current_page?(controller: '/charges', action: 'new') %>
-					<div class="title_current_step">
-						Confirm and pay
-					</div>
-				<% end %>
-
-				<% if current_page?(controller: '/application', action: 'select_stadium') %>
-					<div class="step">
-						<div class="circle current"></div>
-					</div>
-					<div class="step">
-						<div class="circle"></div>
-					</div>
-					<div class="step">
-						<div class="circle"></div>
-					</div>
-				<% elsif current_page?(controller: '/orders', action: 'new') %>
-					<div class="step">
-						<div class="circle current"></div>
-					</div>
-					<div class="step">
-						<div class="circle current"></div>
-					</div>
-					<div class="step">
-						<div class="circle"></div>
-					</div>
-				<% elsif current_page?(controller: '/charges', action: 'new') %>
-					<div class="step">
-						<div class="circle current"></div>
-					</div>
-					<div class="step">
-						<div class="circle current"></div>
-					</div>
-					<div class="step">
-						<div class="circle current"></div>
-					</div>
-				<% end %>
-			</div>
-
 
 		</div> <!--ENDS TOPBAR-->
 
