--- a/app/assets/stylesheets/custom-resizing.css.scss
+++ b/app/assets/stylesheets/custom-resizing.css.scss
@@ -6,9 +6,9 @@
 
   .topbar + div { padding-top: 80px !important; }
   .prgs-bar { display: block; width: 100% !important;}
-  .prgs-bar .title_current_step { display: block; width: 100% !important;}
   //.step { display: inline-block; width: 32%; }
   .topbar { padding: 0 2px 4px 2px !important; }
+  .top-bar .my-gear { float: right !important;}
   .topbar a h3 { font-size: 2.5em; }
   .topbar .my-gear img { width: 30px; height: 30px; }
   .caje-info { font-size: 1.5em; };
