--- a/app/assets/stylesheets/modules/_topbar.scss
+++ b/app/assets/stylesheets/modules/_topbar.scss
@@ -30,28 +30,12 @@
   padding-top: 60px;
 }
 
-.prgs-bar {
-  width: 50%;
-  @extend .gen_inline;
-}
-
-.user-settings {
-  //width: 25%;
-  float: right;
-  @extend .gen_inline;
-}
 
 .title_current_step {
  text-align: center;
  text-transform: uppercase;
   font-size: 10px;
 }
-
-.step {
-  float: left;
-  width: 33.33%;
-  padding: 0;
-  margin: 0;
 
  .circle {
     border: 2px solid khaki;
@@ -66,6 +50,12 @@
       background-color: khaki;
     }
   }
+
+
+.my-gear {
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 
 
