--- a/app/assets/stylesheets/base/_css_reset.scss
+++ b/app/assets/stylesheets/base/_css_reset.scss
@@ -8,6 +8,7 @@ html, body, div, span, object, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, ab
   vertical-align: baseline;
   background: transparent;
   box-sizing: border-box;
+  font-family: Dosis, sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 { font-weight: normal; }
