--- a/app/assets/stylesheets/modules/_topbar.scss
+++ b/app/assets/stylesheets/modules/_topbar.scss
@@ -32,10 +32,11 @@
 
 
 .title_current_step {
+padding-top: 5px;
  text-align: center;
  text-transform: uppercase;
-  font-size: 10px;
-}
+  font-size: 1.5em;
+  }
 
  .circle {
     border: 2px solid khaki;
