--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -117,3 +117,17 @@ tbody.all_the_mods tr {
     opacity: .9;
   }
 }
+
+.list-group {
+  box-shadow: 0px 0px 5px #888;
+}
+
+div.list-group.select .list-group-item  {
+  border-radius: 0px;
+  background-color: $red;
+  color: white;
+
+  &:hover {
+    background-color: black;
+  }
+}
