--- a/app/assets/stylesheets/components/_general.scss
+++ b/app/assets/stylesheets/components/_general.scss
@@ -25,7 +25,7 @@
   font-weight:700;
   color: white;
   cursor: pointer;
-  background-color: #555;
+  background-color: #A10;
 
   &:before {
     content: '\00a0        \00a0';
@@ -41,6 +41,20 @@
   }
 }
 
+.panel-default > .panel-heading {
+  background-color: #A10;
+  cursor: pointer;
+  border-radius: 0px;
+}
+
+table.table {
+  border-radius: 0px;
+}
+.panel {
+  border-radius: 0px;
+    box-shadow: 0px 0px 5px #888;
+
+}
 
 footer.fb {
   margin: 40px auto 80px auto;
