--- a/app/views/charges/_credit_card_form.html.erb
+++ b/app/views/charges/_credit_card_form.html.erb
@@ -17,7 +17,7 @@
       </div>
     </div>
     <div class="col-sm-12">
-      <%= button_tag(type: 'submit', class: "btn btn-primary", id: locals[:button_id]) do %>
+      <%= button_tag(type: 'submit', class: "btn btn-primary payment-button", id: locals[:button_id]) do %>
         <%= locals[:button_text] %>
       <% end %>
   </div>
