--- a/app/views/application/select_stadium.html.erb
+++ b/app/views/application/select_stadium.html.erb
@@ -1,3 +1,6 @@
+<% content_for :page_title do%>
+Select Your Location
+<% end %>
 <div class="list-group select">
 	<% @locations.each do |location| %>
 
