--- a/app/views/charges/_create_account_login.html.erb
+++ b/app/views/charges/_create_account_login.html.erb
@@ -8,7 +8,7 @@
 <div class="row-new" id="create-account-div">
 	<%= form_tag order_charges_path(@order), :id => "create-account-form" do %>
 
-		<%= text_field(:user, :name, :class=> "form-control", :id => "order-name", :placeholder => "Name" ) %>
+		<%= text_field(:user, :name, :class=> "form-control", :id => "order-name", :placeholder => "Full Name" ) %>
 	  	<%= telephone_field(:user, :phone, :class => "form-control",:id => "order-phone-number", :placeholder => "Phone #") %>
 	    <%= text_field(:user, :email, :class =>"form-control", :id=> "order-email", :placeholder => "E-mail Address") %>
 	    <%= password_field(:user, :password, :class => "form-control", :id => "order-password", :placeholder => "Password") %>
