--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,21 +34,11 @@
 		<div id="topbar" class="row-new topbar clear-fix">
 			<a href="/"><h3 class="column two">Shnack</h3></a>
 
-			<div class="prgs-bar column-mobile eight">
 
-				<% if current_page?(controller: '/application', action: 'select_stadium') %>
+				<div class="prgs-bar column-mobile eight">
 					<div class="title_current_step">
-						Select your location
+					<%= yield :page_title %>
 					</div>
-				<% elsif current_page?(controller: '/orders', action: 'new') %>
-					<div class="title_current_step">
-						Craft your meal
-					</div>
-				<% elsif current_page?(controller: '/charges', action: 'new') %>
-					<div class="title_current_step">
-						Confirm and pay
-					</div>
-				<% end %>
 
 			</div>
 
@@ -71,7 +61,7 @@
 					</li>
 				</ul>
 			<%else%>
-				<div class="user-settings">
+				<div class="user-settings my-gear">
 					<%= link_to('Login', new_user_session_path, :class => 'user')  %> 
 					<%= link_to('Sign Up', new_user_registration_path, :class => 'user')  %>  
 				</div> 
