alerts, possibly fixed 1 category form

--- a/app/assets/stylesheets/components/_alerts.scss
+++ b/app/assets/stylesheets/components/_alerts.scss
@@ -1,7 +1,7 @@
 
 .notice {
   text-align: center;
-  font-family: "Poiret One", Geneva, sans-serif;
+  font-family: Dosis, Geneva, sans-serif;
   font-size: 1.6em;
   padding: 15px 0px;
   color: green;
@@ -12,7 +12,7 @@
 
 .flash-error {
   text-align: center;
-  font-family: "Poiret One", Geneva, sans-serif;
+  font-family: Dosis,  Geneva, sans-serif;
   font-size: 1.6em;
   padding: 15px 0px;
   color: #780000;
