--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -60,23 +60,41 @@
       </div>
     <% end %>
     <% else %>
-      <table cellspacing="10" class="table" >
-        <% @menu.items.each do |item| %>
-          <tr class="menu_item" data-id="<%=item.id%>">
-            <td><%= item.name %></td>
-            <td id="<%=item.id%>_price" data-price="<%=item.price%>"><%= Item.integer_to_currency item.price %></td>
-            <% if(item.sold_out) %>
-              <td colspan="3">Item Sold Out</td>
-            <% else %>
-              <td> <span class="glyphicon glyphicon-plus plus"></span> </td>
-              <td id="<%=item.id%>_num" class="num"> 0 </td>
-              <td> <span class="glyphicon glyphicon-minus minus"></span> </td>
-              <td class="item_id hidden"><%= item.id %></td>
-              <%= f.hidden_field "item[#{item.id}]", :value => 0, :class => "item_#{item.id}" %>
-            <% end %>
-          </tr>
-        <% end %>
-      </table>
+     <div class="order-items">
+          <table cellspacing="10" class="table">
+
+          <% category.items.each do |item| %>
+            <tbody class="menu_item" data-id= "<%= item.id %>" style="border:none;outline:none;">
+              <tr>
+                <td><%= item.name %></td>
+                <td id="<%=item.id%>_price" data-price="<%=item.price%>"><%= Item.integer_to_currency item.price %></td>
+                <% if(item.sold_out) %>
+                  <td colspan="3">Item Sold Out</td>
+                <% else %> 
+                                  <td> <span class="glyphicon glyphicon-minus minus"></span> </td>
+
+                  <td id="<%=item.id%>_num" class="num"> 0 </td>
+                                    <td> <span class="glyphicon glyphicon-plus plus"></span> </td>
+
+                  <td class="item_id hidden"> <%= item.id %> </td>
+                  <%= f.hidden_field "item[#{item.id}]", :value => 0, :class => "item_#{item.id}" %>
+             
+                  <% if item.has_description? %>
+                    </tr>
+                    <tr>
+                      <td colspan="5" class="item-description"> <%= item.description %> </td>
+                  <% end %>
+                  <% if item.has_mod?; @item = item %>
+                    <%= render :partial => 'display_mods', :locals => { item: @item } %>
+                  <% end %>
+                <% end %>
+              </tr>
+
+
+            </tbody>
+          <%end%>
+        </table>
+      </div>
     <% end %>
 
 
