--- a/app/assets/stylesheets/base/_css_reset.scss
+++ b/app/assets/stylesheets/base/_css_reset.scss
@@ -12,3 +12,5 @@ html, body, div, span, object, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, ab
 }
 
 h1, h2, h3, h4, h5, h6 { font-weight: normal; }
+
+ol li { display: inline-block; }
