added weight to list group item

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -126,6 +126,7 @@ div.list-group.select .list-group-item  {
   border-radius: 0px;
   background-color: $red;
   color: white;
+  font-weight:900;
 
   &:hover {
     background-color: black;
