--- a/app/assets/stylesheets/base/_buttons.scss
+++ b/app/assets/stylesheets/base/_buttons.scss
@@ -53,6 +53,13 @@ a {
 button {
   font: normal 16px/100% "Dosis", Tahoma, sans-serif;
   font-weight: 500;
+  outline-color: transparent;
+  border-color: transparent;
+
+  &:active, &.visited {
+    outline-color: transparent;
+    border-color: transparent;
+  }
 
 
   &.btn {
@@ -66,18 +73,6 @@ button {
       margin-top:20px;
   }
 
-  &.red {
-    background-color: #C35050;
-    color: white;
-  }
-  &.green {
-    background-color: #50C350;
-    color: white;
-  }
-  &.blue {
-    background-color: #5050C3;
-    color: white;
-  }
   &[disabled=disabled] {
     background-color: #999;
     color: white;
