--- a/app/assets/stylesheets/base/_vars.scss
+++ b/app/assets/stylesheets/base/_vars.scss
@@ -1,23 +1,12 @@
 $white: #EEE;
 $black: #222;
-$red: #A10;
 $cement: #6a717a;
-$blue: #428bca;
 
-.red { color: $red; }
-.cream { color: papayawhip; }
-.khaki { color: khaki; }
-.white { color: $white; }
-.black { color: $black; }
-.cement { color: $cement; }
-.blue { color: $blue; }
-
-a.red { border-color: ligthen($red, 5%); }
-button.red { border-color: ligthen($red, 5%); }
-
-a.red:hover { background-color: darken($red, 5%); }
-button.red:hover { background-color: darken($red, 5%); }
-
+/* paletton.com */
+$red: #BB2222;
+$blue: #147070;
+$brown: #BB6722;
+$green: #1B961B;
 
 $elements: base, phone, menu, topbar, user-settings;
 
