--- a/app/assets/stylesheets/components/buttons.css.scss
+++ b/app/assets/stylesheets/components/buttons.css.scss
@@ -1,23 +1,23 @@
 .action-btn {
+  display: inline-block;
   background-color: #E5E5E5;
-  border: solid 1px #D5D5D5;
-  color: #222;
-  outline: 0;
+  color: #222 !important;
   padding: 9px 12px;
-  box-shadow: inset 0 0 3px #D5D5D5;
 
   &:hover {
     background-color: darken(#E5E5E5, 5%);
-    //box-shadow: inset 0 0 6px #444;
   }
+
 }
 
 /* because default a:hover is khaki */
-a.action-btn:hover { color: #222; }
-
+//a.action-btn:hover { color: #222; }
+//a.push-btn:hover { color: #EEE; }
 
 .push-btn {
-  outline: 0;
+  display: inline-block;
+  color: #EEE !important;
+  position: relative;
   padding: 12px 9px;
   background-color: #777;
   border-radius: 3px;
