--- a/app/assets/stylesheets/wrench.css.scss
+++ b/app/assets/stylesheets/wrench.css.scss
@@ -1,5 +1,9 @@
 @import url(http://fonts.googleapis.com/css?family=Dosis:400,500,700);
 @import url(https://fonts.googleapis.com/css?family=Damion);
+
+//@import "bootstrap";
+
+
 @import "base/normalize",
         "base/css_reset",
         "base/vars",
@@ -7,5 +11,6 @@
         "base/mixins",
         "base/text_presentation",
         "base/buttons",
-        "base/inputs";
-@import "components/buttons";
+        "base/inputs",
+        "components/buttons",
+        "base/colors";
