--- a/app/assets/stylesheets/base/_text_presentation.scss
+++ b/app/assets/stylesheets/base/_text_presentation.scss
@@ -1,11 +1,12 @@
+@import "vars";
 
 h1 {
-  font-size: 2.2em;
-  font-weight: 500;
+  font-family: "Damion", serif;
+  font-size: 3em;
 }
 
 h2 {
-  font-size: 1.6em;
+  font-size: 2.2em;
   font-weight: 500;
 }
 
