--- a/app/assets/stylesheets/base/_utilities.scss
+++ b/app/assets/stylesheets/base/_utilities.scss
@@ -23,6 +23,14 @@
 .pad-top-lrg { padding-top: 30px; } 
 .pad-bottom-lrg { padding-bottom: 30px; } 
 
+.pad-x-sml { padding-left: 10px; padding-right: 10px; }
+.pad-x     { padding-left: 20px; padding-right: 20px; }
+.pad-x-lrg { padding-left: 30px; padding-right: 30px; }
+
+.pad-y-sml { padding-top: 10px; padding-bottom: 10px; }
+.pad-y     { padding-top: 20px; padding-bottom: 20px; }
+.pad-y-lrg { padding-top: 30px; padding-bottom: 30px; }
+
 
 .bold { font-weight: bold; }
 .itatlic { font-style: italic; }
@@ -70,6 +78,25 @@
   background-color: $red;
 }
 
+.wrapper-darkslategray {
+  width: 100%;
+  background-color: darkslategray;
+}
+
+.wrapper-blue {
+  width: 100%;
+  background-color: $blue;
+}
+
+.wrapper-green {
+  width: 100%;
+  background-color: $green;
+}
+
+.wrapper-brown {
+  width: 100%;
+  background-color: $brown;
+}
 .my-container {
   display: block;
   margin-left: auto;
@@ -84,4 +111,9 @@
   margin-right: auto;
   position: relative;
   max-width: 500px;
+}
+
+.gen-inline {
+  display: inline-block;
+  vertical-align: middle;
 }
