--- a/app/assets/stylesheets/custom-resizing.css.scss
+++ b/app/assets/stylesheets/custom-resizing.css.scss
@@ -1,12 +1,7 @@
 //all for the TOPBAR
 @media (max-width: 520px) {
-  .item-name { width: 50%; }
-  .item-price { width: 25%; }
-  .item-desc { display: none; }
-
   .topbar + div { padding-top: 80px !important; }
   .prgs-bar { display: block; width: 100% !important;}
-  //.step { display: inline-block; width: 32%; }
   .topbar { padding: 0 2px 4px 2px !important; }
   .top-bar .my-gear { float: right !important;}
   .topbar a h3 { font-size: 2.5em; }
@@ -14,6 +9,15 @@
   .caje-info { font-size: 1.5em; };
 }
 
+//all for easy-123
+@media (max-width: 520px) {
+  .easy-123 {
+    h1 { font-size: 2em;  }
+    span { font-size: 64px; }
+    p { font-size: 16px; }
+  }
+
+}
 
 
 //awkward tablet
