--- a/app/assets/stylesheets/wrench.css.scss
+++ b/app/assets/stylesheets/wrench.css.scss
@@ -1,5 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Dosis:400,500,700);
 @import url(https://fonts.googleapis.com/css?family=Damion);
+@import url(http://fonts.googleapis.com/css?family=Indie+Flower);
+@import "font-awesome";
 
 //@import "bootstrap";
 
