--- a/app/assets/stylesheets/modules/_topbar.scss
+++ b/app/assets/stylesheets/modules/_topbar.scss
@@ -15,15 +15,12 @@
   display: block;
   @include box-shadow(0, 0, 6px, $black);
 
-  a {
+  a h3 {
+    font-size: 2.5em;
     color: $white;
-
-    h3 {
-      font-size: 2.5em;
-      width: 25%;   //NOTE
-    }
-    &:visited {
-      color: $white;
+    width: 25%;   //NOTE
+    &:hover {
+      color: khaki;
     }
   }
 }
