--- a/app/assets/stylesheets/base/_css_reset.scss
+++ b/app/assets/stylesheets/base/_css_reset.scss
@@ -7,15 +7,8 @@ html, body, div, span, object, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, ab
   border: 0;
   vertical-align: baseline;
   background: transparent;
-  font-family: Dosis, Tahoma, sans-serif;
+  box-sizing: border-box;
+  font-family: Dosis, sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 { font-weight: normal; line-height: 100%; }
-small { color: #666; }
-
-
-
-ol li { display: inline-block; }
-
-p { font-size: 22px; }
-
+h1, h2, h3, h4, h5, h6 { font-weight: normal; }
