--- a/app/assets/stylesheets/base/_text_presentation.scss
+++ b/app/assets/stylesheets/base/_text_presentation.scss
@@ -1,12 +1,13 @@
-@import "vars";
 
 h1 {
-  font-family: "Damion", serif;
-  font-size: 3em;
+  font-size: 2.2em;
+  font-family: "Dosis", Geneva, sans-serif;
+  font-weight: 500;
 }
 
 h2 {
-  font-size: 2.2em;
+  font-size: 1.6em;
+  font-family: "Dosis", Geneva, sans-serif;
   font-weight: 500;
 }
 
@@ -18,14 +19,6 @@ h3 {
 h4 {
   font-size: 2em;
   font-family: "Damion", serif;
-}
-
-h5 {
-  font-size: 1.4em;
-  background-color: $brown;
-  padding: 8px;
-  border-top-right-radius: 6px;
-  border-top-left-radius: 6px;
 }
 
 
@@ -42,3 +35,4 @@ h5 {
 
 
 
+p { font-family: "Dosis", Geneva, sans-serif; font-size: 18px; }
