--- a/app/views/charges/_create_account_login.html.erb
+++ b/app/views/charges/_create_account_login.html.erb
@@ -1,8 +1,8 @@
 <!-- Rendered if the user is not logged in.-->
 
 <div class="row-new choose-account-option">
-   <button class="column six action-btn blue alpha" id="create-account">Create Account</button>
-   <button class="column six action-btn beta" id="log-in">Log In</button>
+   <button class="column six red left" id="create-account">Create Account</button>
+   <button class="column six right" id="log-in">Log In</button>
 </div>
 
 <div class="row-new" id="create-account-div">
@@ -13,7 +13,7 @@
 	    <%= text_field(:user, :email, :class =>"form-control", :id=> "order-email", :placeholder => "E-mail Address") %>
 	    <%= password_field(:user, :password, :class => "form-control", :id => "order-password", :placeholder => "Password") %>
     <% end %>
-	<%= render 'credit_card_form', :locals => { :form_id => "create-account-form", :button_text => "Create Account & Pay For Order", :button_id => "pay-button", :button_class => "push-btn green"} %>
+	<%= render 'credit_card_form', :locals => { :form_id => "create-account-form", :button_text => "Create Account & Pay For Order", :button_id => "pay-button"} %>
 
 	   
 </div>
