quick info, little black bg happy

--- a/app/assets/stylesheets/base/_css_reset.scss
+++ b/app/assets/stylesheets/base/_css_reset.scss
@@ -14,8 +14,10 @@ h1, h2, h3, h4, h5, h6 { font-weight: normal; line-height: 100%; }
 small { color: #666; }
 
 
+ol li { display: inline-block; } //why not
+p { font-size: 22px; }
 
-ol li { display: inline-block; }
-
-p { font-size: 18px; }
-
+body {
+  background-image: image-url('noise-bg-2.png');
+  background-repeat: repeat;
+}
