--- a/app/assets/stylesheets/custom-resizing.css.scss
+++ b/app/assets/stylesheets/custom-resizing.css.scss
@@ -4,7 +4,7 @@
   .item-price { width: 25%; }
   .item-desc { display: none; }
 
-  .topbar + div { padding-top: 80px !important; }
+  .topbar + div { padding-top: 90px !important; }
   .prgs-bar { display: block; width: 100% !important;}
   //.step { display: inline-block; width: 32%; }
   .topbar { padding: 0 2px 4px 2px !important; }
@@ -12,7 +12,19 @@
   .topbar a h3 { font-size: 2.5em; }
   .topbar .my-gear img { width: 30px; height: 30px; }
   .caje-info { font-size: 1.5em; };
+
 }
+
+//all for easy-123
+@media (max-width: 520px) {
+  .easy-123 {
+    h1 { font-size: 2em;  }
+    .i-easy-123 { font-size: 64px; }
+    p { font-size: 16px; }
+  }
+
+}
+
 
 
 
