--- a/app/assets/stylesheets/base/_text_presentation.scss
+++ b/app/assets/stylesheets/base/_text_presentation.scss
@@ -1,3 +1,4 @@
+@import "vars";
 
 h1 {
   font-size: 2.2em;
@@ -21,10 +22,12 @@ h4 {
 
 h5 {
   font-size: 1.4em;
-  background-color: $brown;
+  background-color: $blue;
+  color: $white;
   padding: 8px;
-  border-top-right-radius: 6px;
-  border-top-left-radius: 6px;
+  font-weight: 500;
+  border-top-right-radius: 26px;
+  border-top-left-radius: 2px;
 }
 
 
