--- a/app/assets/stylesheets/modules/_topbar.scss
+++ b/app/assets/stylesheets/modules/_topbar.scss
@@ -15,12 +15,15 @@
   display: block;
   @include box-shadow(0, 0, 6px, $black);
 
-  a h3 {
-    font-size: 2.5em;
+  a {
     color: $white;
-    width: 25%;   //NOTE
-    &:hover {
-      color: khaki;
+
+    h3 {
+      font-size: 2.5em;
+      width: 25%;   //NOTE
+    }
+    &:visited {
+      color: $white;
     }
   }
 }
@@ -58,6 +61,4 @@ padding-top: 5px;
   right: 0;
   top: 0;
 }
-
-
 
