--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -111,27 +111,25 @@
 
 
 
-	<div id="level-2">
-		<div class="row">
-			<div class="col-4 step-style">
-				<h1>Order</h1>
-				<%= image_tag("step1.png", :class => "step-style")   %>
-				<p>From your seat, view the menus of vendors. Pay and place your order.</p>
+	<section class="wrapper-darkslategray">
+		<div class="row-new pad-y-sml easy-123">
+			<div class="column-mobile four">
+				<h1>Select your location</h1>
+				<span class="i-location i-easy-123"></span>
+				<p>Order food from your current spot on your phone or laptop</p>
 			</div>
-	
-			<div class="col-4 step-style">
-				<h1>Relax</h1>
-				<%= image_tag("camera.png", :class => "step-style")   %>
-				<p>Sit back, relax, and enjoy the experience.</p>
+			<div class="column-mobile four">
+				<h1>Order & Pay</h1>
+				<span class="i-pay i-easy-123"></span>
+				<p>Pay in app and be noitified via text when your food is ready</p>
 			</div>
-
-			<div class="col-4 step-style">
-				<h1>PickUp</h1>
-				<%= image_tag("step3.png", :class => "step-style")   %>
-				<p>When your order is ready, a notification will be sent. Pick up and enjoy.</p>
+			<div class="column-mobile four">
+				<h1>Relax until Pick Up</h1>
+				<span class="i-pickup i-easy-123"></span>
+				<p>Sit back, skip the line, & pickup your food</p>
 			</div>
 		</div>
-	</div>
+	</section>
 
 	<footer class="tell-me-more">
 		<%= link_to('This is all about the Shnack', { :controller => "/application", :action => "howdy"}) %>
