removed black bg

--- a/app/assets/stylesheets/base/_css_reset.scss
+++ b/app/assets/stylesheets/base/_css_reset.scss
@@ -17,7 +17,7 @@ small { color: #666; }
 ol li { display: inline-block; } //why not
 p { font-size: 22px; }
 
-body {
+/* body {
   background-image: image-url('noise-bg-2.png');
   background-repeat: repeat;
-}
+} */
