--- a/app/assets/stylesheets/components/_general.scss
+++ b/app/assets/stylesheets/components/_general.scss
@@ -96,7 +96,7 @@ footer.fb {
   p {
     font-size: 1.6em;
     font-weight: 500;
-    color: $white;
+    color: $black;
   }
   a.place-order {
     color: #a10;
