--- a/app/views/application/styleguide.html.erb
+++ b/app/views/application/styleguide.html.erb
@@ -11,13 +11,20 @@
 
 <body>
 
+    <hr>
+    <span>h1..6 with SSS class (the styles to switch to)</span>
+    <hr>
 
-    <h1>Hello world</h1>
-    <h2>Hello world</h2>
-    <h3>Hello world</h3>
-    <h4>Hello world</h4>
-    <h5>Hello world</h5>
-    <h6>Hello world</h6>
+    <h1 class="SSS">Hello world</h1><span>h1.SSS</span>
+    <h2 class="SSS">Hello world</h2><span>h2.SSS</span>
+    <h3 class="SSS">Hello world</h3><span>h3.SSS</span>
+    <h4 class="SSS">Hello world</h4><span>h4.SSS</span>
+    <h5 class="SSS">Hello world</h5><span>h5.SSS</span>
+    <h6 class="SSS" >Hello world</h6><span>h6.SSS</span>
+
+    <hr>
+    <span>Generic h1..6 with small inside</span>
+    <hr>
 
     <h1>Hello world<small>and hello to you</small></h1>
     <h2>Hello world<small>and hello to you</small></h2>
@@ -26,11 +33,21 @@
     <h5>Hello world<small>and hello to you</small></h5>
     <h6>Hello world<small>and hello to you</small></h6>
 
+    <hr>
+    <span>Basic Paragraph tags</span>
+    <hr>
+
     <p>Lorem ipsum un sit doler</p>
+
+    <hr>
+    <span>Generic button and anchor</span>
+    <hr>
 
     <button>Button</button>
     <a href="#">Anchor</a>
 
+    <hr>
+    <span>Buttons/Anchors with class action-btn</span>
     <hr>
 
     <button class="action-btn">Action Button</button>
@@ -39,7 +56,7 @@
     <button class="action-btn green">Action Button</button>
     <button class="action-btn blue">Action Button</button>
 
-    <hr>
+    <br>
 
     <a href="#" class="action-btn">Action Anchor</a>
     <a href="#" class="action-btn red">Action Anchor</a>
@@ -48,6 +65,8 @@
     <a href="#" class="action-btn blue">Action Anchor</a>
 
     <hr>
+    <span>Buttons/Anchors with class push-btn</span>
+    <hr>
 
     <button class="push-btn">Push Button</button>
     <button class="push-btn red">Push Button</button>
@@ -55,13 +74,17 @@
     <button class="push-btn blue">Push Button</button>
     <button class="push-btn brown">Push Button</button>
 
-    <hr>
+    <br>
 
     <a href="#" class="push-btn">Push Anchor</a>
     <a href="#" class="push-btn red">Push Anchor</a>
     <a href="#" class="push-btn green">Push Anchor</a>
     <a href="#" class="push-btn blue">Push Anchor</a>
     <a href="#" class="push-btn brown">Push Anchor</a>
+
+    <hr>
+    <span>Generic text inputs</span>
+    <hr>
 
 
     <textarea>Text Area</textarea>
