changed form-control css, changed easy-123 text color

--- a/app/assets/stylesheets/base/_inputs.scss
+++ b/app/assets/stylesheets/base/_inputs.scss
@@ -51,3 +51,8 @@ input.radio.charges {
   border: none;
   display: inline-block;
 }
+
+input.form-control {
+  border-radius: 0px;
+  margin-bottom:5px;
+}
